<resources>
    <string name="app_name">TAP THE GREY</string>
    <string name="tap_the_grey">TAP THE GREY</string>
    <string name="copyright">Copyright \u00A9 2020, Tap The Grey</string>
    <string name="designed_by">Designed with lots of love by: <b>Bhanit Gaurav</b> </string>
    <string name="score_8">Score: 8</string>
    <string name="image">Image</string>
    <string name="start">START</string>
    <string name="game_over">Game Over</string>
    <string name="play_again">Play Again</string>
    <string name="your_score">Your Score is: </string>
    <string name="bhanit_gaurav">Bhanit Gaurav</string>
    <string name="designed_with">Designed with lots of love by:</string>
    <string name="max_score">Max Score</string>
    <string name="image_view">ImageView</string>
    <string name="allow">Allow</string>
    <string name="no">No</string>
    <string name="yes">Exit</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit the app?</string>
    <string name="next_level">Next Level</string>
    <string name="level_one_passed">Level One Passed</string>
    <string name="level_two_passed">Level Two Passed</string>
    <string name="go_to_next_level">Go to next level</string>
    <string name="play_to_unlock_the_lock">Play to to Unlock the Lock</string>
    <string name="level_image">level image</string>
    <string name="level">Level</string>
    <string name="levels">LEVELS</string>
    <string name="level_three_passed">Level Three Passed</string>
    <string name="version">version</string>
    <string name="company_intro">\t\t\t\t\t\tThe TAP THE GREY game is the best way to concentrate and focus on moving blocks colors.\nTAP THE GREY helps to focus, to hit the grey block before turning it into it\'s original color.</string>
    <string name="terms_conditions">Terms and Conditions.</string>
    <string name="privicy_policy">Privacy and Policy.</string>
</resources>