<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:text="@string/tap_the_grey"
        android:textSize="@dimen/dimen_36sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/tap_the_grey_image"
        app:layout_constraintStart_toStartOf="@id/tap_the_grey_image"
        app:layout_constraintTop_toBottomOf="@id/tap_the_grey_image" />

    <ImageView
        android:id="@+id/tap_the_grey_image"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:contentDescription="@string/tap_the_grey"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_top" />

    <me.biubiubiu.justifytext.library.JustifyTextView
        android:id="@+id/about_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:text="@string/company_intro"
        android:textSize="@dimen/dimen16sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="26dp"
        android:background="@color/divider"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/about_content" />

    <TextView
        android:id="@+id/terms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:gravity="start"
        android:linksClickable="true"
        android:paddingStart="@dimen/dimen_8dp"
        android:paddingTop="@dimen/dimen_18dp"
        android:paddingEnd="@dimen/dimen_8dp"
        android:paddingBottom="@dimen/dimen_18dp"
        android:text="@string/terms_conditions"
        android:textSize="@dimen/dimen16sp"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/view1" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/divider"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/terms" />

    <TextView
        android:id="@+id/privicy_policy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:gravity="start"
        android:linksClickable="true"
        android:paddingStart="@dimen/dimen_8dp"
        android:paddingTop="@dimen/dimen_18dp"
        android:paddingEnd="@dimen/dimen_8dp"
        android:paddingBottom="@dimen/dimen_18dp"
        android:text="@string/privicy_policy"
        android:textSize="@dimen/dimen16sp"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/view2" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/divider"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/privicy_policy" />

    <TextView
        android:id="@+id/version_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:gravity="end"
        android:text="@string/version"
        android:textSize="@dimen/dimen16sp"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/view3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />
</androidx.constraintlayout.widget.ConstraintLayout>