<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/game_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tap_the_grey"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/score_8"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:baselineAligned="false"
        android:elevation="0dp"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="@id/guideline5"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="@id/guideline">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:elevation="0dp"
            android:orientation="vertical"
            android:weightSum="3">

            <ImageView
                android:id="@+id/one"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/red"
                android:contentDescription="@string/image"
                android:elevation="0dp"
                android:foreground="?attr/selectableItemBackground"
                tools:ignore="NestedWeights">

            </ImageView>

            <ImageView
                android:id="@+id/two"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:contentDescription="@string/image"
                android:foreground="?attr/selectableItemBackground">

            </ImageView>

            <ImageView
                android:id="@+id/three"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/tomato"
                android:contentDescription="@string/image"
                android:foreground="?attr/selectableItemBackground">

            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:elevation="0dp"
            android:orientation="vertical"
            android:weightSum="3">

            <ImageView
                android:id="@+id/four"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/blue"
                android:contentDescription="@string/image"
                android:elevation="0dp"
                android:foreground="?attr/selectableItemBackground"
                tools:ignore="NestedWeights">

            </ImageView>

            <ImageView
                android:id="@+id/five"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/green"
                android:contentDescription="@string/image"
                android:foreground="?attr/selectableItemBackground">

            </ImageView>

            <ImageView
                android:id="@+id/six"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/teal_green"
                android:contentDescription="@string/image"
                android:foreground="?attr/selectableItemBackground">

            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:elevation="0dp"
            android:orientation="vertical"
            android:weightSum="3">

            <ImageView
                android:id="@+id/seven"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/voilet"
                android:contentDescription="@string/image"
                android:elevation="0dp"
                android:foreground="?attr/selectableItemBackground"
                tools:ignore="NestedWeights">

            </ImageView>

            <ImageView
                android:id="@+id/eight"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/light_brownish"
                android:contentDescription="@string/image"
                android:foreground="?attr/selectableItemBackground">

            </ImageView>

            <ImageView
                android:id="@+id/nine"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/pink"
                android:contentDescription="@string/image"
                android:foreground="?attr/selectableItemBackground">

            </ImageView>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:foreground="?attr/selectableItemBackground"
        android:paddingStart="30dp"
        android:paddingTop="8dp"
        android:paddingEnd="30dp"
        android:paddingBottom="8dp"
        android:text="@string/start"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/max_score_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/max_score"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:elevation="@dimen/dimen_5dp"
        android:foreground="?attr/selectableItemBackground"
        android:foregroundGravity="center"
        app:cardBackgroundColor="@color/black_background"
        app:cardCornerRadius="@dimen/dimen_50dp"
        app:cardElevation="@dimen/dimen_5dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/start">

        <TextView
            android:id="@+id/max_score"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_40sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02872777" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10670315" />
</androidx.constraintlayout.widget.ConstraintLayout>